# cs337_project_1

./: .gitignore  LICENSE  Makefile  README.md  autograder.py  example_aggregation.py  example_extraction_usage.py  example_with_output.py  gg_api.py  pyproject.toml  simple_usage_example.py  test_aggregation.py
extracted_output/: golden_globes_2013_summary.json
extracted_output/awards/: golden_globes_2013_awards.csv
extracted_output/complete/: golden_globes_2013_complete.json
extracted_output/fashion/: golden_globes_2013_fashion.csv
extracted_output/nominees/: golden_globes_2013_nominees.csv
extracted_output/winners/: golden_globes_2013_winners.csv
src/award/: __init__.py  __main__.py  aggregate.py  analysis.py  clean.py  cli.py  extract.py  filter.py  gg_api.py  processor.py  read.py  tweet.py  utils.py  write.py
src/award/cli/: extract.py  preprocess.py  summary.py
src/award/extractors/: __init__.py  additional_goals_extractor.py  award_extractor.py  host_extractor.py  nominee_extractor.py  presenter_extractor.py  winner_extractor.py
src/award/processors/: __init__.py  award_extractor.py  base.py  cleaner.py  fashion_extractor.py  filter.py  generator.py  host_extractor.py  nominee_extractor.py  presenter_extractor.py  speech_extractor.py  transformer.py
src/award/validators/: __init__.py  artist_validator.py  entity_type_validator.py
tests/: __init__.py  test_award.py  test_extracting_info.py  test_filter.py  test_read.py  test_transformer.py
